--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
         <i class="fa fa-refresh" aria-hidden="true"></i> 重置
       </button>
     </div>
+
+    <div id="app"></div>
   </body>
 </html>
